# CURRENCY_RATES_send_bot

./: currency_rates_now.json  pyproject.toml
src/: config.py  main.py  utils.py
